# k-coder

./: AGENTS.md  README.md  UI-AUDIT-REPORT.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml
docs/: 开发路线图.md  扩展.md  架构.md
docs/adr/: 0001-technology-stack.md  0002-reviewable-change-transaction.md  0003-controlled-extension-runtime.md
e2e/: workbench.spec.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  context.rs  execution.rs  lib.rs  logging.rs  main.rs  persistence.rs  workbench.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/extensions/: hooks.rs  mcp.rs  mod.rs
src-tauri/src/patch/: mod.rs
src-tauri/src/policy/: mod.rs
src-tauri/src/protocol/: mod.rs
src-tauri/src/providers/: anthropic.rs  common.rs  config.rs  credentials.rs  gemini.rs  mod.rs  openai.rs  responses.rs  sse.rs  testing.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/tools/: mod.rs
src-tauri/test-fixtures/: hook.mjs  mcp-http-server.mjs  mcp-server.mjs
src/api/: runtime.ts
src/components/: PatchReviewDialog.tsx  SettingsDialog.tsx  Toast.tsx  WorkbenchPanel.tsx
src/stores/: workbenchStore.ts
src/types/: runtime.ts
